2011-07-31 Charles Suprin <hamaa1vs at gmail.com>

    * src/gtk-rot-knob.c
    * src/gtk-rot-knob.h
    * src/gtk-sky-glance.c
    * src/gtk-sky-glance.h
    * src/gtk-rig-ctrl.h
    * src/gtk-sat-list.h
    * src/gtk-sat-module.h
    * src/gtk-sat-list-col-sel.h
    * src/gtk-sat-selector.h
    * src/gtk-single-sat.h
    * src/gtk-polar-plot.c
    * src/gtk-polar-plot.h
    * src/gtk-event-list.h
    * src/gtk-sat-map.c
    * src/gtk-sat-map.h
    * src/gtk-freq-knob.c
    * src/gtk-freq-knob.h
    * src/gtk-azel-plot.c
    * src/gtk-rot-ctrl.h
    * src/gtk-azel-plot.h
    * src/mod-mgr.c
    * src/gtk-polar-view.c
    * src/gtk-sat-tree.h
    * src/gtk-polar-view.h
    Remove deprecated calls and functions to allow make CFLAGS+="-DGDK_DISABLE_DEPRECATED -DGTK_DISABLE_DEPRECATED" to work per <http://developer.gnome.org/gtk3/3.0/gtk-migrating-2-to-3.html>.


2011-07-30 Charles Suprin <hamaa1vs at gmail.com>

    * src/gtk-azel-plot.h
    * src/gtk-event-list.h
    * src/gtk-polar-plot.h
    * src/gtk-polar-view.h
    * src/gtk-sat-list.h
    * src/gtk-sat-map.h
    * src/gtk-sat-module.h
    * src/gtk-sat-module-tmg.h
    * src/gtk-sky-glance.h
    Change gtk headers to only include from short list at <http://developer.gnome.org/gtk3/3.0/gtk-migrating-2-to-3.html>.

    * src/gpredict-help.c
    * src/gpredict-utils.c
    * src/gtk-azel-plot.c
    * src/gtk-polar-plot.c
    * src/gtk-polar-view.c
    * src/gtk-sat-map.c
    * src/gtk-sat-module.c
    * src/gtk-sat-module-popup.c
    * src/gtk-sky-glance.c
    * src/loc-tree.c
    * src/main.c
    * src/menubar.c
    * src/mod-cfg.c
    * src/mod-mgr.c
    * src/qth-editor.c
    * src/sat-info.c
    * src/sat-log-browser.c
    * src/sat-pass-dialogs.c
    * src/sat-pref.c
    * src/sat-pref-qth-editor.c
    * src/sat-pref-rig-editor.c
    * src/sat-pref-rot-editor.c
    * src/save-pass.c
    Use access functions instead of private elements per <http://developer.gnome.org/gtk3/3.0/gtk-migrating-2-to-3.html>.
