@@ -1,3 +1,13 @@
+2011-08-04 Charles Suprin <hamaa1vs at gmail.com>
+
+    * ChangeLog
+    * src/gtk-sat-map.c
+    * src/gtk-sat-map.h
+    * src/gtk-sat-map-popup.c
+    * src/config-keys.h
+    Remember ground tracks and highlight coverages in map view.
+    Feature Request: 3179738
+
 2011-07-31 Charles Suprin <hamaa1vs at gmail.com>
 
     * src/gtk-rot-knob.c
